<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CircuitActivity">

    <Button
        android:id="@+id/btnback3"
        android:layout_width="79dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/red"
        android:shadowColor="@color/black"
        android:text="Back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_InfoCircuits" />

    <ListView
        android:id="@+id/list_InfoCircuits"
        android:layout_width="357dp"
        android:layout_height="376dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextYear4">

    </ListView>

    <EditText
        android:id="@+id/editTextYear4"
        android:layout_width="121dp"
        android:layout_height="48dp"
        android:layout_marginVertical="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="156dp"
        android:autofillHints=""
        android:hint="@string/year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toEndOf="@+id/text_search_Name"
        app:layout_constraintTop_toBottomOf="@+id/text_search4"></EditText>

    <Button
        android:id="@+id/btnYear4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/red"
        android:shadowColor="@color/black"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextYear"
        app:layout_constraintTop_toBottomOf="@+id/text_search4" />

    <TextView
        android:id="@+id/textsearchYear"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/year2"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_search4" />

    <TextView
        android:id="@+id/text_search4"
        android:layout_width="302dp"
        android:layout_height="57dp"
        android:gravity="center"
        android:text="Search Circuits"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Circuit Name"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textsearchYear" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="76dp"
        android:text="Location"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editTextYear4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="52dp"
        android:text="Country"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnYear4" />
</androidx.constraintlayout.widget.ConstraintLayout>